<resources>
    <string name="app_name">TimeMoies</string>
    <string name="menu_refresh">刷新</string>

    <string name="main_menu_setting">设置</string>
    <string name="movie_detail">电影详情</string>
    <string name="pre_sort_label">排序方式</string>
    <string name="pre_sort_key">sort_id</string>
    <string name="pre_popular_sort">popular</string>
    <string name="pre_top_rated_sort">top_rated</string>
    <string name="pre_popular_sort_label">热门</string>
    <string name="pre_top_rated_sort_label">高分</string>

    <string name="trailer">预告片</string>
    <string name="movie_comment">影评</string>
    <string name="no_comment_tip">暂时还没有关于该影片的影评！</string>
    <string name="no_trailer_tip">暂时还没有关于该影片的预告片！</string>
    <string name="main_menu_favorite">我的收藏</string>
    <string name="load_error">信息暂时无法加载</string>
    <string name="favorite_tip">您还没有收藏数据，快去收藏吧</string>
    <string name="no_network_tip">当前网络不可用，请链接网络后重试</string>
    <string name="loading">正在加载中。。。</string>

    <string name="content_authority">com.timen4.ronnny.timemovies</string>
    <string name="sync_account_type">timemovies.ronnny.timen4.com</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">TimeMovie 通知</string>

    <string name="pref_enable_notifications_true">已打开</string>
    <string name="pref_enable_notifications_false">已关闭</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="action_setting">Setting</string>
    <string name="poularMovie">热门电影：</string>
    <string name="highScoreMovie">高分电影：</string>

    <string name="sync_frequency">同步频率</string>
    <string name="sync_frequency_key">sync_id</string>
    <string name="sync_4_hours">four_hours</string>
    <string name="sync_a_day">one_day</string>
    <string name="sync_a_week">one_week</string>
    <string name="sync_never">never</string>
    <string name="sync_4_hours_label">4小时</string>
    <string name="sync_a_day_label">一天</string>
    <string name="sync_a_week_label">一周</string>
    <string name="sync_never_label">从不</string>


</resources>
