<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListPreference
        android:title="@string/pre_sort_label"
        android:key="@string/pre_sort_key"
        android:defaultValue="@string/pre_popular_sort"
        android:entryValues="@array/pref_sorts_values"
        android:entries="@array/pref_sorts_options"
        />
    <SwitchPreference
        android:persistent="true"
        android:key="@string/pref_enable_notifications_key"
        android:defaultValue="@string/pref_enable_notifications_default"
        android:title="@string/pref_enable_notifications_label"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:summaryOff="@string/pref_enable_notifications_false"
        />



</PreferenceScreen>